Changed basic colour scheme and fixed invisible section bug

--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ button {
 }
 
 header {
-  border: 1px solid black;
-  background-color: lightblue;
+  background-color: #022b3a;
+  color: #fff;
   text-align: center;
 }
 
@@ -135,17 +135,18 @@ section {
   justify-content: space-evenly;
   align-items: center;
   border: solid 1px black;
+  background-color: #bfdbf7;
 }
 
 ul {
-  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 70%;
   height: 60%;
   padding: 0;
   margin: 0;
-}
-
-li {
-  margin: 50px 0px;
 }
 
 #sign-img {
@@ -155,6 +156,14 @@ li {
 
 .info-section {
   height: 480px;
+}
+
+#sign-inner-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
 }
 
 .hidden {
@@ -168,4 +177,28 @@ canvas {
 .stats {
   text-align: center;
   font-size: 2.5rem;
+}
+
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
+input[type="button"].button-primary {
+  color: #fff;
+  background-color: #022b3a;
+  border-color: #022b3a;
+}
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="submit"].button-primary:hover,
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="submit"].button-primary:focus,
+input[type="reset"].button-primary:focus,
+input[type="button"].button-primary:focus {
+  color: #fff;
+  background-color: #1f7a8c;
+  border-color: #1f7a8c;
 }
